repos/emily-python/contents/test/reader/fail/backslashComma.em
# Ought to fail: No comma after \
# Arg: --ast
# Expect failure

# Backslash comma is not properly caught as an error in Python
# Tags: broken-default

\,
